Played around a lil bit with css

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>CHCIKEN</h1>
-    <a href="../images/chicken.webp" rel="noopener noreferer" target="_blank">chicken</a>
+    <img src="../images/chicken.webp" ></a>
     <h3>Ingredients</h3>
     <ul>
         <li>chicken</li>
