Added grid rows n colums to 3 recipes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html" rel="noopener noreferer">Lasagna</a>
+    <ol>
+        <li><a href="recipes/lasagna.html" rel="noopener noreferer">Lasagna</a></li> 
+        <li><a href="recipes/chicken.html" rel="noopener noreferer">Chicken</a></li>
+        <li><a href="recipes/squid.html" rel="noopener noreferer">Adobong Pusit</a></li>
+    </ol>
+</div>
 </body>
 </html>
