--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -4,21 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>CHCIKEN</h1>
+    <div><h1>CHICKEN</h1></div>
     <img src="../images/chicken.webp" ></a>
+    
+    <div class="contain">
+        <div class="descrip"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora facilis voluptas, distinctio porro quibusdam dolorem velit maiores laboriosam veritatis voluptates omnis delectus vitae minima et placeat ea sequi esse dolorum.</p></div>
+        <div class="Ingredients">
     <h3>Ingredients</h3>
     <ul>
         <li>chicken</li>
         <li>Masala</li>
         <li>Skill</li>
     </ul>
+        </div>
+    <div class="Steps">
     <h3>Steps</h3>
     <ol>
         <li>Cook</li>
         <li>just Cook</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum delectus voluptatem numquam maiores impedit eos laborum laudantium nostrum dignissimos reprehenderit. Magnam corporis ullam dignissimos eveniet expedita et, nihil dolorum aliquam?</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt culpa aliquam debitis atque, architecto similique quaerat quibusdam nihil, perspiciatis dignissimos aut ipsam magni esse suscipit nam nobis. Illo, blanditiis tempora.</li>
     </ol>
+</div>
+</div>
     <a href="../index.html">Home</a>
 
 </body>
