--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,24 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.webp">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, dolores quia modi repudiandae eveniet qui. Culpa rem repudiandae voluptatum nesciunt minus voluptatem laborum possimus earum perspiciatis totam? Nemo, dolore ullam.</p>
-    <h3>Ingredients</h3>
+   <div class="img"> <img src="../images/lasagna.webp"></div>
+    <div class="contain">
+   <div class="descrip"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, dolores quia modi repudiandae eveniet qui. Culpa rem repudiandae voluptatum nesciunt minus voluptatem laborum possimus earum perspiciatis totam? Nemo, dolore ullam.</p></div>
+    <div class="Ingredients">
+   <h3>Ingredients</h3>
     <ul>
         <li>Meat</li>
         <li>Onion</li>
         <li>Canned Tomatoes</li>
         <li>fresh herbs<li>sugar</li></li>
     </ul>
+    </div> 
+    <div class="Steps">
     <h3>Steps</h3>
     <ol>
         <li>Cook the meat:</li>
         <li>Cook the noodles</li>
         <li>Make the cheese layer<li>Assemble the lasagna</li></li>
     </ol>
+    </div>
+        </div>
     <a href="../index.html" rel="noopener noreferer">Home</a>
 </body>
 </html>
