--- a/recipes/squid.html
+++ b/recipes/squid.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Adobong Pusit (Squid Adobo)</h1>
     <img src="../images/squid.jpg">
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe iure illum suscipit id, debitis consequatur voluptas ex repellendus harum temporibus ullam repudiandae odit amet blanditiis odio expedita quam? Obcaecati, consequuntur?</p>
+    <div class="contain">
+    <div class="descrip"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe iure illum suscipit id, debitis consequatur voluptas ex repellendus harum temporibus ullam repudiandae odit amet blanditiis odio expedita quam? Obcaecati, consequuntur?</p></div>
+    <div class="Ingredients">
     <h3>Ingredients</h3>
     <ul>
         <li>2 ¼ pounds squid, cleaned</li>
@@ -16,11 +19,15 @@
         <li>½ cup water</li>
         <li>Courage</li>
     </ul>
+    </div>
+    <div class="Steps">
     <h3>Steps</h3>
     <ol>
         <li>Do you really need steps?</li>
         <li>Life is about winging it. All the best</li>
     </ol>
+</div>
+</div>
     <a href="../index.html">Home</a>
 
 </body>
